# sugar

./: .deepsource.toml  .flake8  .gitignore  .topdeps  .topmsg  AUTHORS  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  build-snapshot.py  build-snapshot.sh  configure  configure.ac  dbus-installed.conf.in  dbus-uninstalled.conf  intltool-extract.in  intltool-merge.in  intltool-update.in  maint-helper.py  pylint.sh  setup-run-from-source.sh  setup-run-from-source.tcsh  spawn-test-env.py  sugar  sugar-emulator  sugar-emulator-shutdown  sugar_globals.py  sugar_globals.py.in  test_journaltoolbox.py
activities/browser/: AddressItem.py  BrowserActivity.py  BrowserShell.py  Makefile.am  NavigationToolbar.py  NotificationBar.py  browser.activity  browser.py
bindings/gecko/: Makefile.am  gecko-browser.cpp  gecko-browser.h  gecko.defs  gecko.override  geckomodule.c
bindings/globalkeys/: Makefile.am  globalkeys.defs  globalkeys.override  globalkeysmodule.c  sugar-key-grabber.c  sugar-key-grabber.h
browser/: GeckoBrowserPersist.cpp  GeckoBrowserPersist.h  GeckoContentHandler.h  GeckoDirectoryProvider.cpp  GeckoDirectoryProvider.h  GeckoDocumentObject.cpp  GeckoDocumentObject.h  GeckoDownload.cpp  GeckoDownload.h  GeckoDragDropHooks.cpp  GeckoDragDropHooks.h  Makefile.am  README  browser.py  sugar-browser.cpp  sugar-browser.h  sugar-download-manager.h  sugar-download.c  sugar-download.h
browser/components/: Makefile.am
browser/sessionstore/: .gitignore  Makefile.am  nsISessionStore.idl  nsSessionStore.js
data/: .gitignore  Makefile.am  Makefile.in  activities.defaults  activities.hidden  em.py  gecko-prefs.js  group-labels.defaults  gtkrc  gtkrc.em  mime.defaults  mime.types  nm-user-settings.conf  org.sugar.brightness.policy.in  org.sugar.serial-number.policy.in  org.sugarlabs.gschema.xml  schoolactivities.defaults  startup.flac  sugar-100.gtkrc  sugar-72.gtkrc  sugar-emulator.desktop  sugar-emulator.desktop.in  sugar-schemas.convert  sugar-xo.gtkrc  sugar.desktop  sugar.gtkrc  sugar.schemas.in  sugar.xml.in
data/icons/: Makefile.am  Makefile.in
lib/: .gitignore  Makefile.am  sexy-icon-entry.h  sugar-address-entry.c  sugar-address-entry.h  sugar-key-grabber.c  sugar-key-grabber.h  sugar-menu.c  sugar-menu.h  sugar-x11-util.c  sugar-x11-util.h
lib/data/: Makefile.am  gecko-prefs.js  mime.types
lib/python/: Makefile.am  _sugar.c  _sugar.defs  _sugar.override  _sugarmodule.c  gtkmozembed.override  xulrunner.cpp
lib/src/: GeckoContentHandler.cpp  GeckoContentHandler.h  GeckoDownload.cpp  GeckoDownload.h  Makefile.am  SugarContentHandler.cpp  SugarContentHandler.h  SugarDownload.cpp  SugarDownload.h  gecko-browser.cpp  gecko-browser.h  sugar-address-entry.c  sugar-address-entry.h  sugar-audio-manager.c  sugar-audio-manager.h  sugar-browser-chandler.c  sugar-browser-chandler.h  sugar-browser.cpp  sugar-browser.h  sugar-content-handler.cpp  sugar-download-manager.c  sugar-download-manager.h  sugar-key-grabber.c  sugar-key-grabber.h  sugar-marshal.list  sugar-push-scroller.c  sugar-push-scroller.h  sugar-tray-manager.c  sugar-tray-manager.h  sugar-utils.c  sugar-utils.h
lib/sugar/: .gitignore  Makefile.am  _sugarext.defs  _sugarext.override  _sugarextmodule.c  env.py  profile.py  sound.py  sugar-address-entry.c  sugar-address-entry.h  sugar-menu.h  sugar-preview.c  sugar-preview.h  util.py  wm.py
lib/ui/: Makefile.am  eggaccelerators.c  sexy-icon-entry.c  sugar-address-entry.c  sugar-marshal.list  sugar-menu.c  sugar-menu.h
lib/xdgmime/: Makefile.am
schemas/: Makefile.am  sugar.schemas.in
service/: Makefile.am  Makefile.in  activityregistryservice.py  bundleregistry.py  clipboardobject.py  clipboardservice.py  config.py  config.py.in  main.py  org.laptop.ActivityRegistry.service.in  org.laptop.Clipboard.service.in  org.laptop.ObjectTypeRegistry.service.in  sugar-shell-service
services/clipboard/: ClipboardService.py  Makefile.am  clipboardobject.py  clipboardservice.py  objecttypeservice.py  org.laptop.ActivityRegistry.service.in  org.laptop.Clipboard.service.in  org.laptop.ObjectTypeRegistry.service.in  sugar-clipboard  typeregistry.py
services/console/: Makefile.am  README  console.py  label.py  org.laptop.sugar.Console.service.in  sugar-console
services/datastore/: .gitignore  Makefile.am  datastore.py  dbus_helpers.py  demodata.py  org.laptop.sugar.DataStore.service.in  sugar-data-store
services/nm/: Makefile.am  bubble.py  nmclient.py  nminfo.py  style.py  sugar-nm-applet  wepkeydialog.py
services/presence/: Activity.py  Buddy.py  BuddyIconCache.py  Makefile.am  PresenceService.py  Service.py  __init__.py  activity.py  buddy.py  buddyiconcache.py  linklocal_plugin.py  org.laptop.Sugar.Presence.service.in  presenceservice.py  pstest.py  psutils.py  server_plugin.py  sugar-presence-service  test_psutils.py
services/shell/: Makefile.am  __init__.py  activityregistryservice.py  bundleregistry.py  clipboardobject.py  clipboardservice.py  objecttypeservice.py  sugar-shell-service
shell/: ActivitiesModel.py  ActivityContainer.py  ActivityHost.py  ActivityRegistry.py  BuddyPopup.py  ChatController.py  ChatListener.py  ConsoleLogger.py  ConsoleWindow.py  Emulator.py  FirstTimeDialog.py  FriendIcon.py  FriendPopup.py  Friends.py  HomeWindow.py  HomeWindow2.py  Invites.py  Makefile.am  Owner.py  PeopleWindow.py  PresenceView.py  PresenceWindow.py  Process.py  Session.py  Shell.py  ShellModel.py  StartPage.py  WindowManager.py  __init__.py  config.py.in  hardwaremanager.py  kbdconfig  logsmanager.py  main.py  shell.py  shellservice.py  sugar  sugar-activity  sugar-activity-factory  sugar-console  (+7 more)
sugar/: .gitignore  LogWriter.py  Makefile.am  TracebackUtils.py  __init__.py  __installed__.py.in  __uninstalled__.py  __uninstalled__.py.in  _sugarext.c  _sugarext.defs  _sugarext.override  _sugarextmodule.c  _sugaruiext.defs  _sugaruiext.override  _sugaruiextmodule.c  bots.py  date.py  emulator.py  env.py  keybindings.py  logger.py  ltihooks.py  network.py  profile.py  setup.py  simulator.py  sugar  theme.py  util.py  wm.py
(+1596 files in other folders)
