SUBDIRS = conf data frame home PresenceService

bin_SCRIPTS = 				\
	sugar				\
	sugar-activity			\
	sugar-activity-factory		\
	sugar-console			\
	sugar-presence-service

sugardir = $(pkgdatadir)/shell
sugar_PYTHON =				\
	__init__.py			\
	ActivityHost.py			\
	ConsoleWindow.py		\
	FirstTimeDialog.py		\
	FriendIcon.py			\
	FriendPopup.py			\
	Friends.py			\
	Invites.py			\
	Owner.py			\
	Shell.py			\
	Session.py

EXTRA_DIST = $(bin_SCRIPTS)
