sugardir = $(pythondir)/sugar/browser
sugar_PYTHON =			\
	__init__.py		\
	browser.py		\
	NotificationBar.py	\
	BrowserShell.py         \
	AddressItem.py          \
	BrowserActivity.py      \
	NavigationToolbar.py

icondir = $(pkgdatadir)
icon_DATA =		\
	fold.png	\
	unfold.png

rcdir = $(pkgdatadir)
rc_DATA = browser.rc

activitydir = $(pkgdatadir)/activities
activity_DATA = browser.activity

EXTRA_DIST =			\
	$(rc_DATA)		\
	$(activity_DATA)	\
	$(icon_DATA)
