sugardir = $(pkgdatadir)/activities/browser
sugar_PYTHON =			\
	__init__.py		\
	browser.py		\
	NotificationBar.py	\
	BrowserShell.py         \
	AddressItem.py          \
	BrowserActivity.py      \
	NavigationToolbar.py

activitydir = $(pkgdatadir)/activities/browser
activity_DATA = browser.activity

EXTRA_DIST = $(activity_DATA)
