sugardir = $(pkgdatadir)/data/icons

sugar_DATA =                        \
	module-about_me.svg             \
	module-about_my_computer.svg    \
	module-date_and_time.svg        \
	module-frame.svg                \
	module-keyboard.svg             \
	module-language.svg             \
	module-modemconfiguration.svg	\
	module-network.svg              \
	module-power.svg                \
	module-updater.svg		\
	module-webaccount.svg

EXTRA_DIST = $(sugar_DATA)
